[gd_scene load_steps=2 format=3 uid="uid://dqwxixxvncq6e"]

[ext_resource type="Script" path="res://scripts/ui/inventory_menu/item_card.gd" id="1_4umyn"]

[node name="ItemCard" type="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_4umyn")
equipped = null

[node name="ItemButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
